# OpenRTX

./: .gitignore  AGENTS.md  EMULATOR_LINUX_UI.md  FUZZING.md  FUZZING_REPORT.md  README.md  SECURITY_FRAMEWORK.md  horse.md  meson.build  meson_options.txt  run_security_analysis.sh
lib/minmea/: minmea.c
lib/minmea/include/: minmea.h
openrtx/include/core/: cps.h  horse_codec.h
openrtx/include/protocols/horse/: HorseConstants.hpp  HorseDatatypes.hpp  HorseDemodulator.hpp  HorseFrameDecoder.hpp  HorseFrameEncoder.hpp  HorseModulator.hpp  HorseUtils.hpp  horse_crypto.h  ldpc_horse.h  melpe_horse.h
openrtx/include/rtx/: OpMode_Horse.hpp  rtx.h
openrtx/src/core/: horse_codec.c  voicePromptUtils.c
openrtx/src/protocols/horse/: HorseDemodulator.cpp  HorseFrameDecoder.cpp  HorseFrameEncoder.cpp  HorseModulator.cpp  horse_crypto.c  ldpc_horse.c  (+1 more)
openrtx/src/rtx/: OpMode_Horse.cpp  rtx.cpp
platform/drivers/baseband/: radio_MD3x0.cpp
platform/targets/MD-3x0/: hwconfig.h
scripts/: ANALYSIS_TOOLS.md  bin2sgl.py  cs7000_wrap.py  dfu-convert.py  gd-77_firmware_loader.py  gen_fuzz_corpus.py  generate_symbols.py  horse_keytool.py  horse_provision.py  plot_m17_demod_csv.py  plot_m17_demod_csv2.py  run_all_fuzzers_3h.sh  run_analysis.sh  run_flawfinder.sh  run_fuzz_smoke_test.sh  run_libfuzzer.sh  run_valgrind.sh  uf2conv.py
tests/fuzz/: fuzz_horse_frame.cpp  fuzz_ldpc_horse.c  fuzz_m17_callsign.cpp  fuzz_m17_frame.cpp  fuzz_m17_golay.cpp  fuzz_minmea.c
tests/fuzz/dict/: frame_sync_words.dict
tests/unit/: crypto_utils_stub.c  horse_crypto.cpp  horse_frame.cpp
(+6 files in other folders)
